# NanoStream-Raspberry4B

./: .gitignore  AGENTS.md  CMakeLists.txt  OPTIMIZATIONS.md  PLAN.md  README.md  README_CN.md
deploy/mediamtx/: docker-compose.yml  mediamtx.yml  webrtc-simple.html
docs/: P1.md  P2_PERF.md
include/: ncnn_detector.hpp  net_util.hpp  pipeline_manager.hpp  rtsp_service.hpp  runtime_config.hpp
models/: nanodet_m-int8.param
scripts/: build.sh  capture_calib.sh  download_models.sh  install_ncnn.sh
src/: main.cpp  ncnn_detector.cpp  ncnn_detector_decode.cpp  ncnn_detector_postprocess.cpp  net_util.cpp  pipeline_manager.cpp  rtsp_service.cpp  runtime_config.cpp
